[package]
name = "paramtest"
version = "0.1.0"
edition = "2018"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.2"
vst_window = "0.1.0"
raw-window-handle = "0.3.3"
wgpu = "0.11.0"
imgui-wgpu = "0.18.0"

[lib]
name = "paramtest"
crate-type = ["cdylib"]
